--- a/laravel-app/package.json
+++ b/laravel-app/package.json
@@ -7,6 +7,7 @@
     },
     "devDependencies": {
         "axios": "^1.6.1",
+        "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^0.8.0",
         "vite": "^4.0.0"
     }
